objects/Case.object
<CustomObject>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>Case Type</label>
        <picklist>
            <picklistValues>
                <fullName>8x8 Voicemail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automated Pickup Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyer Pickup Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Enthusiast Test Drive Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Craigslist Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CX Voicemail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Inbound Seller Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permanent Return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Response to Drip Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>shift.com Test Drive Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>shift.com Test Drive Request Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>shift.com Vehicle Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary Return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tesla Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party Listing Site Vehicle Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Available - Schedule Test Drives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Unavailable - Cancel Test Drives</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Craigslist_Listing_Email_Inquiry__c</fullName>
        <label>Craigslist Listing Email Inquiry</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Craigslist_Listing_Phone_Number_Inquiry__c</fullName>
        <label>Craigslist Listing Phone Number Inquiry</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Delivery_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Notes__c</fullName>
        <label>Delivery Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Delivery_Scheduled_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Scheduled By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Scheduled_For__c</fullName>
        <label>Delivery Scheduled For</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delivery__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery</label>
        <referenceTo>Delivery__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initial_Buyer_Outreach__c</fullName>
        <label>Initial Buyer Outreach</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inquiry_Type__c</fullName>
        <label>Inquiry Type</label>
        <picklist>
            <picklistValues>
                <fullName>Hot Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Coming Soon Notification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Sale Pending Notification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Drive Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Question</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <formula>Opportunity_ID__r.Lead_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Delivery Location</description>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Has_Trade_In__c</fullName>
        <formula>Opportunity_ID__r.Has_Trade_In__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Has Trade In</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Region__c</fullName>
        <formula>Opportunity_ID__r.Region_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage_Status__c</fullName>
        <formula>TEXT( Opportunity_ID__r.Lost_Reason__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT( Opportunity_ID__r.StageName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue__c</fullName>
        <label>Queue</label>
        <picklist>
            <picklistValues>
                <fullName>Car Enthusiast Test Drive Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permanent Return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary Return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Available - Reschedule Test Drives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Unavailable - Reschedule Test Drives</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requested_Test_Drive_Location__c</fullName>
        <label>Requested Test Drive Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Test_Drive_Time__c</fullName>
        <label>Requested Test Drive Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Auto List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Trader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Gurus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cars.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>chineseinla.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Craigslist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CreditIQ via AutoPay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>driveshift.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>driveshift.com - Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eBay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LendingTree via AutoPay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mojo Motors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oddle/Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OfferUp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Street Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUpost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade-In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TrueCar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale - auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale - dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of Mouth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Drive_Notes__c</fullName>
        <label>Test Drive Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Drive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Drive</label>
        <referenceTo>Test_Drive__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VIN_Inquiry__c</fullName>
        <label>VIN Inquiry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Carfax_VHR_URL__c</fullName>
        <formula>Vehicle_ID__r.Seller_Opportunity_ID__r.Is_Attached_Carfax_VHR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Carfax VHR URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Coming_Soon__c</fullName>
        <formula>Vehicle_ID__r.Coming_Soon__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Coming Soon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vehicle_Driveshift_Listing_URL__c</fullName>
        <formula>Vehicle_ID__r.Driveshift_Listing_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Driveshift Listing URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Driveshift_TD_Booking_URL__c</fullName>
        <formula>Vehicle_ID__r.Driveshift_Test_Drive_Booking_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Driveshift TD Booking URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle_Interest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle Interest</label>
        <referenceTo>Vehicle_Interest__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle_Listing_Region__c</fullName>
        <formula>Vehicle_ID__r.Listing_Region_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Listing Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Order_Buyer_Opportunity__c</fullName>
        <formula>Vehicle_Order__r.Buyer_Opportunity_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Order Buyer Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle Order</label>
        <referenceTo>Vehicle_Order__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle_Sale_Pending__c</fullName>
        <formula>Vehicle_ID__r.Sale_Pending__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Sale Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vehicle_Stage__c</fullName>
        <formula>Vehicle_ID__r.Seller_Stage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Transmission__c</fullName>
        <formula>TEXT( Vehicle_ID__r.Transmission__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Transmission</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Case_Type__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Cases</label>
    </listViews>
    <listViews>
        <fullName>unowned_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>unowned</label>
        <queue>unowned</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>